206.3 desarrollo de la interfaz de crear reparacion (#224)
* arreglo ruta del post,actualizo cliente y cambio precio que lo mostraba mal el que no era

* primer intento del post , sin autenticar por usuario y con alguna cosa que no me cuadra pero funciona

---------
