# src/AppForSEII2526.Web/OpenAPIs/swagger.json
@@ -1729,7 +1729,7 @@
             "nullable": true
           }
         },
-        "additionalProperties": {}
+        "additionalProperties": { }
       },
       "Reparacion": {
         "required": [
@@ -1854,6 +1854,14 @@
           "cantidad": {
             "type": "integer",
             "format": "int32"
+          },
+          "precio": {
+            "type": "number",
+            "format": "double"
+          },
+          "reparacionId": {
+            "type": "integer",
+            "format": "int32"
           }
         },
         "additionalProperties": false
@@ -1908,7 +1916,7 @@
             "nullable": true
           }
         },
-        "additionalProperties": {}
+        "additionalProperties": { }
       }
     }
   }
